--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -34,4 +35,10 @@ background-image: linear-gradient(orange,tomato);
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
     
+}
+.Dream_big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-position-y:220px;
 }
