--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ body{
 h1{
     font-size: 50px;
 }
-#org{
+h2{
+    font-size: 35px;
+}
+.org{
     color:orange
 }
 
-section{
+.flexContainer{
     display: flex;
     margin-bottom: 100px;
 }
@@ -41,4 +44,36 @@ background-image: linear-gradient(orange,tomato);
     background-repeat: no-repeat;
     background-position: right;
     background-position-y:220px;
+}
+
+.box1{
+    box-shadow: 10px 10px 40px grey;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    
+}
+
+.exp_area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+
+#WebD{
+    border-left: 5px solid;
+        border-image:linear-gradient(salmon,tomato);
+        border-image-slice: 1;
+}
+
+#DM{
+        border-left: 5px solid;
+        border-image:linear-gradient(blue,cyan);
+        border-image-slice: 1;
+}
+
+footer p{
+    text-align: center;
 }
